testCases/parserTestCases/correct/decTail.cs16
-- Carston Schilds, Feb 21st 2016

int x,y,z;
int[] i,j,k;
int foo1(void){;}

bool a,b,c;
bool[] p,q,r;
bool foo3(void){;}

void main(void){;}