testCases/parserTestCases/error/argumentsE.cs16
-- Carston Schilds, Feb 21st 2016
void main(void){

    -- omitting comma
    foo(x+x, not y (a[b]), bar());
    foo(x+x, not y, foo2(a[b])  bar());

    -- extra comma
    foo(x+x,, not y, (a[b]), bar());
    foo(x+x, not y, foo2(a[b],, bar()));
}